2009-04-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-06-25
	* moved range checking of FEDids to configure to detect playback mode

2009-01-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-06-23
	* added -tcp option to initialize script to support use of old pttcp

2009-01-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-06-22
	* support SM python config
	* added -debug option to initialize to include stepper in cfg

2008-11-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-06-21
	* fix problem with fake events to avoid generating GT-like FEDs
	* updated script to use python config

2008-11-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-06-20
	* call fsm_.findRcmsStateListener(), declare two RMCS state
	notifier parameters to app infospace.

2008-10-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-19
	* all changes refer to scripts/initialize
	* remove EP parameter 'collReconnSec'
	* set RB cell sizes to 2/4/1 MB, queue depth to 16
	* set RB monSleepTime to 5 seconds

2008-06-13  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-06-17
	* make BU.cc compile under 64bit (by casting all vector<T>::size()
	values to uint32_t where they are compared to
	xdata::UnsignedInteger32)

2008-05-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-15
	* activate processKiller in initialize script
	* add variable runNumber to initialize script and set it for each
	relevant application

2008-05-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-14
	* add StorageManager parameter 'filePath' (/tmp/<user>)
	* repair configuration of PrescaleService according to
	FWCore/PrescaleService V00-04-00 and higher (21X and higher).

2008-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-13
	* adjust to StorageManager changes (removed xdaq parameters) in
	EventFilter/StorageManager V03-12-03
